tenants/tenant-test/web-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-app
    tenant: tenant-test
  name: web-app
  namespace: tenant-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-app
      tenant: tenant-test
  template:
    metadata:
      labels:
        app: web-app
        tenant: tenant-test
    spec:
      containers:
      - image: nginx:1.27-alpine
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        name: web-app
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
