tenants/tenant-test/web-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-app
    tenant: tenant-test
  name: web-app-service
  namespace: tenant-test
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: web-app
    tenant: tenant-test
  type: ClusterIP
