tenants/tenant-test/web-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-ingress
  namespace: tenant-test
spec:
  ingressClassName: nginx
  rules:
  - host: web-app.tenant-test.local.dev
    http:
      paths:
      - backend:
          service:
            name: web-app-service
            port:
              number: 80
        path: /
        pathType: Prefix
